cabal-version: 2.2

name: shortener
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.18
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Shortener
  build-depends:
    , scotty >= 0.20.1 && < 0.21
    , blaze-html >= 0.9 && < 0.10
    , containers
    , text
    , http-types
    , regex-compat

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , shortener
    , blaze-html >= 0.9 && < 0.10
    , scotty >= 0.20 && < 0.21
    , http-types
