cabal-version: 2.2

name: shortener
version: 0.1.0.0

common common
  build-depends:
    , base >= 4.18
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: Shortener
  build-depends:
    , scotty >= 0.20.1 && < 0.21
    , blaze-html >= 0.9 && < 0.10
    , containers
    , text
    , http-types
    , regex-compat

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , shortener
    , blaze-html >= 0.9 && < 0.10
    , scotty >= 0.20 && < 0.21
    , http-types

test-suite spec
  import: common
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ShortenerSpec
  build-depends:
    , QuickCheck
    , hspec >= 2.10.10
    , shortener
    , base >= 4.7 && < 5
    , hspec-discover
  build-tool-depends: hspec-discover:hspec-discover
  default-extensions:
    ScopedTypeVariables
    TypeApplications
  ghc-options:
    -Wno-orphans
  type: exitcode-stdio-1.0
